# CW32F030_Arduino

./: CMakeLists.txt
Arduino/: README.md  boards.txt  platform.txt
Arduino/cores/arduino/: HardwareSerial.cpp  HardwareSerial.h  PinAF.h  WInterrupts.cpp  WInterrupts.h  WSerial.h  board.c  board.h  main.cpp  pins_arduino.cpp  pins_arduino.h  wiring_digital.c  wiring_time.h
Arduino/cores/arduino/cw32/: PeripheralPins.h  PinNames.h  PinNamesTypes.h  PortNames.c  PortNames.h  analog.cpp  analog.h  backup.h  clock.c  clock.h  cw32_def.c  cw32_def.h  cw32_def_build.h  digital_io.h  hw_config.c  hw_config.h  interrupt.cpp  interrupt.h  pinconfig.h  pinmap.c  pinmap.h  startup_cw32yyxx.S  uart.c  uart.h
Arduino/cores/arduino/cw32/lib/: cw32yyxx.h  cw32yyxx_adc.c  cw32yyxx_adc.h  cw32yyxx_atim.c  cw32yyxx_atim.h  cw32yyxx_awt.c  cw32yyxx_awt.h  cw32yyxx_btim.c  cw32yyxx_btim.h  cw32yyxx_crc.c  cw32yyxx_crc.h  cw32yyxx_debug.c  cw32yyxx_debug.h  cw32yyxx_digitalsign.c  cw32yyxx_digitalsign.h  cw32yyxx_dma.c  cw32yyxx_dma.h  cw32yyxx_flash.c  cw32yyxx_flash.h  cw32yyxx_gpio.c  cw32yyxx_gpio.h  cw32yyxx_gtim.c  cw32yyxx_gtim.h  cw32yyxx_i2c.c  cw32yyxx_i2c.h  cw32yyxx_iwdt.c  cw32yyxx_iwdt.h  cw32yyxx_lvd.c  cw32yyxx_lvd.h  cw32yyxx_pwr.c  cw32yyxx_pwr.h  cw32yyxx_ram.c  cw32yyxx_ram.h  cw32yyxx_rcc.c  cw32yyxx_rcc.h  cw32yyxx_rtc.c  cw32yyxx_rtc.h  cw32yyxx_spi.c  cw32yyxx_spi.h  cw32yyxx_systick.c  (+9 more)
Arduino/system/CW32F030/CMSIS/Device/CW/CW32F0xx/Include/: cw32f0xx.h
Arduino/system/CW32F030/Hardware/inc/: cw32f030.h  cw32f030_uart.h  system_cw32f030.h
Arduino/system/CW32F030/Hardware/src/: cw32f030_btim.c  cw32f030_uart.c  interrupts_cw32f030.c  system_cw32f030.c
Arduino/tools/platformio/: boards_remap.json
Arduino/variants/CW32F0xx/F030C8T/: PeripheralPins.c  generic_clock.c  ldscript.ld  variant_generic.cpp  variant_generic.h
src/: fuck.cpp
